--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="action_settings">Информация</string>
     <string name="inf1">"УВАЖАЕМЫЕ СТУДЕНТЫ!"\n\n
-
+        <i>"Зимние каникулы с 26.01.2017 по 08.02.2017"\n\n</i>
 "Прием оплаты за пересдачу зачетов,"\n
 "экзаменов и отработок пропущенных занятий"\n
 "осуществляется в кассе института (каб.512) 5 этаж."\n\n
@@ -66,8 +66,8 @@
 "Адрес банка: г.Минск, пр-т Независимости,95а"\n</string>
 
     <string name="timing">Сроки оплаты этапов</string>
-    <string name="zaochnoe_a">4 курс. 18.09-07.10.2017 </string>
-    <string name="zaochnoe_b">1 курс. 18.09-30.09.2017 </string>
+    <string name="zaochnoe_a">4 курс. 02.10-21.10.2017 </string>
+    <string name="zaochnoe_b">2 курс. 09.10-28.10.2017 </string>
 
 
 
