--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,18 +11,18 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Информация</string>
-    <string name="inf1"><i>"Зимние каникулы с 26.01.2018 по 08.02.2018"</i></string>
-    <string name="inf4"><i>"Возросла плата за обучение :("</i></string>
-    <string name="inf3">"Прием оплаты за пересдачу зачетов,"\n
-    "экзаменов и отработок пропущенных занятий"\n
-    "осуществляется в кассе института (каб.512) 5 этаж."
+    <string name="inf1">"УВАЖАЕМЫЕ СТУДЕНТЫ!"\n\n
+        <i>"Зимние каникулы с 26.01.2017 по 08.02.2017"\n\n</i>
+"Прием оплаты за пересдачу зачетов,"\n
+"экзаменов и отработок пропущенных занятий"\n
+"осуществляется в кассе института (каб.512) 5 этаж."\n\n
 
-    "Время работы кассы:"\n
-    "Понедельник- пятница 9.00-16.50"\n
-    "(технический перерыв 13.00-13.30, 15.30-16.00)"\n
-    "Суббота и воскресенье - выходной" \n
-    "Допуск к экзаменам для студентов заочной"\n
-    "формы получения образования осуществляется в каб . 401(4 этаж)"\n
+"Время работы кассы:"\n
+"Понедельник- пятница 9.00-16.50"\n
+"(технический перерыв 13.00-13.30, 15.30-16.00)"\n
+"Суббота и воскресенье - выходной" \n\n
+        "Допуск к экзаменам для студентов заочной"\n
+"формы получения образования осуществляется в каб . 401(4 этаж)"\n\n
     "УДАЧНОЙ ВАМ УЧЁБЫ!"</string>
     <string name="title_activity_scrolling">Информация</string>
     <string name="lorem_ipsum1">РЕКВИЗИТЫ ДЛЯ ОПЛАТЫ с 04.07.2017:</string>
