--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
 "Адрес банка: г.Минск, пр-т Независимости,95а"\n</string>
 
     <string name="timing">Сроки оплаты этапов</string>
-    <string name="zaochnoe_a">1 курс 1 сессия 08.01-20.01.18</string>
+    <string name="zaochnoe_a">2 курс полн.ср 05.02-24.02.18</string>
     <string name="zaochnoe_b">4 курс 30.10-18.11.2017</string>
     <string name="zaochnoe_c">3 курс 5 сессия 23.10-11.11.2017</string>
     <string name="zaochnoe_d">2 курс 09.10-28.10.2017</string>
