--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,19 +11,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Информация</string>
-    <string name="inf1"><i>"Зимние каникулы с 26.01.2018 по 08.02.2018"</i></string>
-    <string name="inf4"><i>"Об учебе у меня только положительные эмоции. Знаний я получил достаточно для открытия своего дела в РБ. У меня есть хобби MedvediAero.by .  В данный период времени, это основной официальный источник дохода,чему я безусловно рад! Выпуск: 2009, Бизнес-администрирование"</i></string>
-    <string name="inf3">"Прием оплаты за пересдачу зачетов,"\n
-    "экзаменов и отработок пропущенных занятий"\n
-    "осуществляется в кассе института (каб.512) 5 этаж."
-
-    "Время работы кассы:"\n
-    "Понедельник- пятница 9.00-16.50"\n
-    "(технический перерыв 13.00-13.30, 15.30-16.00)"\n
-    "Суббота и воскресенье - выходной" \n
-    "Допуск к экзаменам для студентов заочной"\n
-    "формы получения образования осуществляется в каб . 401(4 этаж)"\n
-    "УДАЧНОЙ ВАМ УЧЁБЫ!"</string>
+    <string name="inf1"><i>Студенты дневной формы получения образования, занятия начинаются с  08.02.2018 (четверг)</i></string>
+    <string name="inf4"><i>"Об учебе у меня только положительные эмоции. Знаний я получил достаточно для открытия своего дела в РБ. У меня есть хобби <b>MedvediAero.by</b> .  В данный период времени, это основной официальный источник дохода,чему я безусловно рад! Выпуск: 2009, Бизнес-администрирование"</i></string>
+    <string name="inf3">Прием оплаты за пересдачу зачетов, экзаменов и отработок пропущенных занятий осуществляется в кассе института (каб.512) 5 этаж.\n <b>Время работы кассы:</b>\n
+    Понедельник-пятница 9.00-16.50\n (технический перерыв 13.00-13.30, 15.30-16.00).\n Суббота и воскресенье-выходной.\n Допуск к экзаменам для студентов заочной формы получения образования осуществляется в каб 401(4 этаж).\n
+    УДАЧНОЙ ВАМ УЧЁБЫ!\n <b>График работы кабинета тестирования:</b> \n
+Понедельник- пятница 9.00-17.00\n
+(технический перерыв 13.00-13.30)</string>
     <string name="title_activity_scrolling">Информация</string>
     <string name="lorem_ipsum1">РЕКВИЗИТЫ ДЛЯ ОПЛАТЫ с 04.07.2017:</string>
     <string name="lorem_ipsum2">Комиссия %</string>
