--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     */
 
     <string name="a1">Павел ФАДЕЕВ (Индивидуальный Предприниматель)</string>
-    <string name="a2"></string>
+    <string name="arendadom">Аренда жилья</string>
     <string name="a3"> </string>
     <string name="a4"> </string>
     <string name="a5"> </string>
