Смена мотивируещего человека

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="action_settings">Информация</string>
     <string name="inf1"><i>Студенты дневной формы получения образования, занятия начинаются с  08.02.2018 (четверг)</i></string>
-    <string name="inf4"><i>"Об учебе у меня только положительные эмоции. Знаний я получил достаточно для открытия своего дела в РБ. У меня есть хобби <b>MedvediAero.by</b> .  В данный период времени, это основной официальный источник дохода,чему я безусловно рад! Выпуск: 2009, Бизнес-администрирование"</i></string>
+    <string name="inf4"><i>"Спасибо институту. Второе высшее образование поможет мне добиться успеха по окончании игровой карьеры — в качестве менеджера или, например, предпринимателя.  Лучше быть менеджером, нежели тренером. Последние часто меняются, первые — остаются. <b>Выпуск: 2012, Бизнес-администрирование"</b></i></string>
     <string name="inf3">Прием оплаты за пересдачу зачетов, экзаменов и отработок пропущенных занятий осуществляется в кассе института (каб.512) 5 этаж.\n <b>Время работы кассы:</b>\n
     Понедельник-пятница 9.00-16.50\n (технический перерыв 13.00-13.30, 15.30-16.00).\n Суббота и воскресенье-выходной.\n Допуск к экзаменам для студентов заочной формы получения образования осуществляется в каб 401(4 этаж).\n
     УДАЧНОЙ ВАМ УЧЁБЫ!\n <b>График работы кабинета тестирования:</b> \n
@@ -73,7 +73,7 @@
     * Created by kiruha_21 on 04.02.2018.
     */
 
-    <string name="a1">Павел ФАДЕЕВ (Индивидуальный Предприниматель)</string>
+    <string name="a1">Михаил ГРАБОВСКИЙ (Игрок национальной сборной Беларуси по хоккею, Нью-Йорк Айлендерс)</string>
     <string name="a2">Расписание звонков</string>
     <string name="a3"> </string>
     <string name="a4"> </string>
