Сроки, реквизиты оплаты

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
         "в ОАО Франсабанк, код GTBNBY22"\n
 "Адрес банка: г.Минск, пр-т Независимости,95а"\n</string>
 
-    <string name="timing">Сроки оплаты этапов</string>
+    <string name="timing">Сроки, реквизиты оплаты</string>
     <string name="phonebookipd">Телефонный справочник</string>
     <string name="zaochnoe_a">4 курс c 12.03-31.03.18</string>
     <string name="zaochnoe_b">3 курс сокр.с 19.02-10.03.18</string>
